src/style.css
:root {
  --page-bg-color: #e0eafc;
  --header-bg-color: #1e3c72;
  --title-color: #f0f8ff;
  --widget-bg-color: #f0f8ff;
  --widget-border-radius: 15px;
  --widget-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
  --primary-font-color: #333333;
  --secondary-font-color: #666666;
  --accent-color: #3498db;
  --error-bg-color: #f8d7da;
  --error-font-color: #721c24;
  --font-family: 'Poppins', sans-serif;
  --title-font-size: 24px;
  --standard-font-size: 16px;
  --info-font-size: 18px;
  --padding: 15px;
  --margin: 20px;
  --transition-speed: 0.3s;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--page-bg-color);
  font-family: var(--font-family);
}

#app {
  min-height: 100vh;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--header-bg-color);
  box-shadow: var(--widget-box-shadow);
  padding: 5px;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.body {
  display: grid;
  grid-template-rows: repeat(2, min-content);
  grid-template-columns: repeat(4, 1fr);
  align-items: stretch;
  justify-items: center;
  padding: var(--margin);
  gap: var(--margin);
  max-width: 2560px;
  margin: 0 auto;
}

.logo-container {
  width: 60px;
  height: 60px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.title {
  color: var(--title-color);
  font-size: var(--title-font-size);
  font-weight: 700;
  letter-spacing: 2px;
  margin: 0 20px;
}

.search-icon-container {
  width: 30px;
  height: 30px;
  margin: 0 20px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}

.card {
  background-color: var(--widget-bg-color);
  border-radius: var(--widget-border-radius);
  box-shadow: var(--widget-box-shadow);
  min-width: 100%;
  max-width: 600px;
}

.card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-inline: var(--padding);
  padding-top: var(--padding);
  border-bottom: 4px solid var(--page-bg-color);
}

.card-title {
  color: var(--primary-font-color);
  font-size: var(--title-font-size);
  font-weight: 700;
  margin-bottom: 10px;
}

.card-info-corner {
  color: var(--secondary-font-color);
  font-size: var(--info-font-size);
  font-weight: 400;
  margin-bottom: 10px;
}

.card-body {
  color: var(--primary-font-color);
  font-size: var(--standard-font-size);
  font-weight: 400;
  padding: var(--padding);
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: calc(100% - 57px); /* 57px is the height of the header */
}

.forecast-body .info-content {
  font-style: italic;
}

.forecast-body .info-row {
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
}

.forecast-body .info-content {
  margin: 0;
}

.error-card {
  background-color: var(--error-bg-color);
  border: 1px solid var(--error-font-color);
  grid-column: 1 / -1; /* span all columns */
}

.error-card * {
  color: var(--error-font-color);
}

.error-body {
  padding-top: var(--padding);
  text-align: center;
}

.user-friendly-message {
  font-weight: 600;
}

.detailed-message {
  padding-top: var(--padding);
}

.current-weather-hero {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: min-content min-content min-content;
  grid-template-areas:
    'address address'
    'icon       temp'
    'conditions conditions';
  justify-content: center;
  align-items: center;
  gap: var(--padding);
}

.address {
  grid-area: address;
  font-size: var(--info-font-size);
  font-weight: 600;
}

.weather-icon {
  grid-area: icon;
  align-self: center;
  justify-self: center;
  width: 60px;
  height: 60px;
}

.temp-container {
  grid-area: temp;
  display: flex;
  align-items: center;
  justify-content: center;
}

.current-temp {
  font-size: 48px;
  font-weight: 700;
}

.temp-unit {
  align-self: flex-end;
  margin-left: -16px;
  margin-bottom: 4px;
  font-size: 18px;
  font-weight: 700;
  color: var(--secondary-font-color);
}

.conditions {
  grid-area: conditions;
  align-self: center;
  justify-self: center;
  font-size: var(--info-font-size);
  font-weight: 600;
}

.separator {
  padding-bottom: var(--padding);
  border-bottom: 4px solid var(--page-bg-color);
}

.info-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: var(--padding);
}

.info-icon {
  width: 50px;
  height: auto;
  margin-block: -10px;
  padding-right: 10px;
  margin-right: 10px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border-right: 4px solid var(--page-bg-color);
}

.info-title {
  font-size: var(--info-font-size);
  font-weight: 600;
}

.info-content {
  font-size: var(--info-font-size);
  font-weight: 400;
  margin-left: auto;
}

#hours-preview {
  max-width: 100%;
  grid-column: 1 / -1;
}

#hours-preview .card-body {
  padding-block: 0;
}

.hourly-weather-body {
  display: flex;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  gap: 20px;
  padding: var(--padding);
  scroll-padding: 4px;
  scroll-snap-align: start;
  -webkit-overflow-scrolling: touch; /* Für sanftes Scrollen auf iOS */
  scrollbar-width: thin; /* Dünne Scrollbar */
  scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Farbe des Scrollbar-Daumen und Hintergrund */
}

.hourly-weather-body:last-child {
  padding-right: 0;
}

/* Webkit-basierte Browser */
.hourly-weather-body::-webkit-scrollbar {
  height: 8px; /* Höhe der horizontalen Scrollbar */
}

.hourly-weather-body::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5); /* Farbe des Scrollbar-Daumen */
  border-radius: 10px; /* Abgerundete Ecken */
}

.hour-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: calc(var(--padding) / 2);
  scroll-snap-align: start;
  max-width: min-content;
}

.hour-time {
  font-size: var(--info-font-size);
}

.hour-temp {
  font-size: var(--info-font-size);
  font-weight: 400;
  width: min-content;
}

.hour-icon {
  width: 40px;
  height: 40px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.hour-conditions {
  font-size: 14px;
  font-weight: 400;
  min-height: 50px;
  text-align: center;
  display: flex;
  align-items: flex-end;
  justify-content: center;
}

.hour-precip-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 58px;
}

.hour-precip-value {
  font-size: 14px;
  font-weight: 400;
}

#daily-weather {
  max-width: 100%;
  grid-column: 1 / -1;
}

#daily-weather .card-body {
  padding-block: 0;
}

.daily-weather-body {
  display: flex;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  gap: 20px;
  padding: var(--padding);
  scroll-padding: 4px;
  scroll-snap-align: start;
  -webkit-overflow-scrolling: touch; /* Für sanftes Scrollen auf iOS */
  scrollbar-width: thin; /* Dünne Scrollbar */
  scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Farbe des Scrollbar-Daumen und Hintergrund */
}

.daily-weather-body:last-child {
  padding-right: 0;
}

.daily-weather-body::-webkit-scrollbar {
  height: 8px; /* Höhe der horizontalen Scrollbar */
}

.daily-weather-body::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5); /* Farbe des Scrollbar-Daumen */
  border-radius: 10px; /* Abgerundete Ecken */
}

.day-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: calc(var(--padding) / 2);
  scroll-snap-align: start;
}

.day-date {
  font-size: var(--info-font-size);
  text-wrap: nowrap;
}

.day-name {
  font-size: var(--info-font-size);
  font-weight: 600;
}

.day-icon {
  width: 40px;
  height: 40px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.day-temp-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 5px;
}

.day-temp {
  font-size: var(--info-font-size);
  font-weight: 400;
  width: min-content;
}

.day-min-max-temp {
  font-size: 14px;
  font-weight: 400;
}

.day-precip-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 58px;
  margin-top: 5px;
}

.day-precip-value {
  font-size: 14px;
  font-weight: 400;
}

.day-precip-icon {
  width: 20px;
  height: 20px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.highlighting-card {
  max-width: 200px;
  padding: 20px;
  background-color: var(--page-bg-color);
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s;
}

.highlighting-card:hover {
  transform: translateY(-5px);
}

/* MEDIA QUERIES */

/* Ultrawide screens */
@media (min-width: 1600px) {
  .hourly-weather-body {
    justify-content: space-between;
  }

  .daily-weather-body {
    justify-content: space-between;
  }
}

@media (max-width: 1800px) {
  .body {
    grid-template-columns: repeat(2, 1fr);
  }

  /* move the bottom to cards to 3rd and 4th position */
  .card:nth-child(3),
  .card:nth-child(4) {
    grid-row: 3;
  }
}

@media (max-width: 700px) {
  .body {
    grid-template-columns: 1fr;
  }

  .card:nth-child(3),
  .card:nth-child(4) {
    grid-row: auto;
  }

  .card:nth-child(3) {
    grid-row: 4;
  }

  .card:nth-child(4) {
    grid-row: 5;
  }
}

